teams specs
