# weeks-backend/api-spec.yml
@@ -26,6 +26,8 @@ components:
           type: integer
         email:
           type: string
+        name:
+          type: string
         rememberMeToken:
           type: string
           nullable: true
@@ -35,6 +37,28 @@ components:
         updatedAt: 
           type: string
           format: date-time
+    Team:
+      type: object
+      properties:
+        id: 
+          type: integer
+        uid:
+          type: string
+          nullable: true
+        name:
+          type: string
+        ownerId:
+          type: integer
+        notes:
+          type: string
+          nullable: true
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt: 
+          type: string
+          format: date-time
+
 paths:
   /auth/login:
     post:
@@ -56,12 +80,38 @@ paths:
                     format: date-time
                   expires_in:
                     type: number
+    parameters:
+      - name: email
+        in: path
+        description: The email of the user
+        required: true
+      - name: password
+        in: path
+        description: The password of the user
+        required: true
   /auth/signup:
     post:
       summary: Signup and create a new user.
       responses:
         '200':
           description: New User.
+          content:
+            application/json:
+              schema:
+                type: object
+    parameters:
+      - name: email
+        in: path
+        description: The email of the new user
+        required: true
+      - name: password
+        in: path
+        description: The password of the new user
+        required: true
+      - name: name
+        in: path
+        description: The name of the new user
+        required: true
   /auth/logout:
     post:
       summary: Revoke a token for a user.
@@ -79,7 +129,7 @@ paths:
     get:
       summary: Returns a list of users.
       responses:
-        '200':    # status code
+        '200':
           description: A JSON array of user names
           content:
             application/json:
@@ -95,7 +145,7 @@ paths:
     post:
       summary: Create a user.
       responses:
-        '200':    # status code
+        '200':
           description: The new user.
           content:
             application/json:
@@ -105,7 +155,7 @@ paths:
     get:
       summary: Returns a certain user.
       responses:
-        '200':    # status code
+        '200':
           description: The user got.
           content:
             application/json:
@@ -114,9 +164,54 @@ paths:
     put:
       summary: Update a certain user.
       responses:
-        '200':    # status code
+        '200':
           description: The user got.
           content:
             application/json:
               schema: 
                 $ref: "#/components/schemas/User"
+  /teams:
+    post:
+      summary: Create a new team.
+      responses:
+        '200':
+          description: The new team.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Team"
+    get:
+      summary: Returns a list of teams associated to the current user.
+      responses:
+        '200':
+          description: The teams associated to my user.
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties:
+                  meta:
+                    $ref: "#/components/schemas/PaginationMeta"
+                  data:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/Team"
+  /teams/{teamId}:
+    get:
+      summary: Returns a certain team.
+      responses:
+        '200':
+          description: The team.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Team"
+    put:
+      summary: Update a certain team.
+      responses:
+        '200':
+          description: The team updated.
+          content:
+            application/json:
+              schema: 
+                $ref: "#/components/schemas/Team"
